06/01/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 1.8.5.4 'Black Dow':
	- minor fixes.
	- Cygwin-related fixes and INSTALL additions.

05/31/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 1.8.5.3 'Black Dow':
	- REST API extra script example and docs extention.
	
05/26/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 1.8.5.1 'Black Dow':
	- Config file parsing fixed (Issue 28)

05/20/2013 Oleg Moskalenko <mom040267@gmail.com>,
			Erik Johnston <erikj@openmarket.com> 
Version 1.8.5.0 'Black Dow':
	- IP access control lists.
	- log file name fix.
	- alt-* ports default behavior changed. 
	- "passive TCP" option in uclient.
	
05/18/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.8.4.5 'Black Dow':
	- socket conditions cleaned (SIGPIPE, etc)

05/17/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.8.4.4 'Black Dow':
	- configuration and installation adjusted for:
		- NetBSD;
		- Solaris;
		- OpenBSD;
	- Screen messages fixed;
	- code security fixes.

05/15/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.8.4.3 'Black Dow':
	- Compilation warning removed.
	- Log file fixed (Issue 26)
	
05/15/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.8.4.2 'Black Dow':
	- repackaging for Debian compliance. Docs separated.

05/14/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.8.4.1 'Black Dow':
        - Cosmetics (docs, warnings, etc).
        - More complex case of TURN-server-behind-NAT is implemented,
        when multiple public-ip/private-ip mappings are involved. 
        
05/13/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.8.4.0 'Black Dow':
        - Redis DB support added.
        - Crash on help text fixed.
        - Max allocation time can be changed in the command-line or
        in the config file.  
        
05/09/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.8.3.9 'Black Dow':
        - No changes - just the tarball is repackaged for Debian compatibility.

05/07/2013 Oleg Moskalenko <mom040267@gmail.com>