@@ -88,6 +88,8 @@ Flags:
 		By default, the program uses the long-term credentials mechanism 
 		if authentication is required.
 
+-D		Do mandatory channel padding even for UDP (like pjnath).
+
 Options with required values:  
 
 -l      Message length (Default: 100 Bytes).
