@@ -1,5 +1,5 @@
 .\" Text automatically generated by txt2man
-.TH TURN 1 "31 May 2013" "" ""
+.TH TURN 1 "04 June 2013" "" ""
 .SH GENERAL INFORMATION
 
 A set of turnutils_* programs provides some utility functionality to be used
@@ -120,6 +120,10 @@ Set DONT_FRAGMENT parameter in TURN requests.
 use short\-term credentials mechanism for authentication. 
 By default, the program uses the long\-term credentials mechanism 
 if authentication is required.
+.TP
+.B
+\fB\-D\fP
+Do mandatory channel padding even for UDP (like pjnath).
 .TP
 .B
 Options with required values:
